# aims-saas-adapter_kims

./: .env  .env-examples  .gitignore  .project  README.md  app.bat  app.py  env.py  pid.py  pyproject.toml  requirements.txt
data/archived/: 09102025_20251118_141339.csv
data/archived/28112025/: solum-export_20251128_124533.csv  test_20251128_123905_20251128_124019.csv
data/db/: aims.db
db/: database_manager.py
modules/: lib.py
modules/aims_saas/: aims_saas_api_client.py
modules/common/: common.py  maintenance.py
scripts/nssm/scripts/: env.bat  service-edit.bat  service-install.bat  service-remove.bat  service-restart.bat  service-start.bat  service-stop.bat
services/: csv_process.py  load_artciles.py
